# C2Me2

./: .notes.swp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  history.txt  main  main.cpp  tasks.json
certs/: server.crt  server.key
cmake/: config.cmake
exfil/: tasks.json
src/: Makefile  cmake_install.cmake  history.txt
src/agent/: CMakeLists.txt  Makefile  cmake_install.cmake
src/commands/: CMakeLists.txt  Makefile  cmake_install.cmake
src/common/: CMakeLists.txt  Makefile  cmake_install.cmake  config.cpp  config.hpp  logging.cpp  logging.hpp
src/crypto/: CMakeLists.txt  Makefile  cmake_install.cmake
src/proto/: CMakeLists.txt  Makefile  cmake_install.cmake
src/server/: CMakeLists.txt  Makefile  cmake_install.cmake  dispatcher.cpp  dispatcher.hpp  globals.cpp  history.txt  main.cpp  pty_session.cpp  pty_session.hpp  server  server_config.cpp  server_config.hpp  session_manager.cpp  session_manager.hpp
src/transport/: CMakeLists.txt  Makefile  cmake_install.cmake  tls_transport.cpp  tls_transport.hpp
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
